--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,9 @@
 == stuff and links
 
+=== Probot
+
+- https://probot.github.io/docs/http/[HTTP routes with Probot]
+
 === Kubernetes links and tutos
 
 ==== Readiness and Liveness Probes
