--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,7 @@
 
 - https://probot.github.io/docs/http/[HTTP routes with Probot]
 - https://probot.github.io/docs/logging/[Logging]
+- https://github.com/probot/probot/issues/779[Issue: Best practice for rate limiting #779]
 
 === Kubernetes links and tutos
 
