--- a/README.adoc
+++ b/README.adoc
@@ -56,3 +56,6 @@
 
 https://www.ivarjacobson.com/publications/blog/preparing-features-pi-planning-just-say-no-waterfall-thinking[PREPARING FEATURES FOR PI PLANNING - JUST SAY NO TO WATERFALL THINKING]
 
+=== Git
+
+https://jeffkreeftmeijer.com/git-flow/[use git-flow]
