--- a/README.adoc
+++ b/README.adoc
@@ -56,6 +56,8 @@
 
 https://www.ivarjacobson.com/publications/blog/preparing-features-pi-planning-just-say-no-waterfall-thinking[PREPARING FEATURES FOR PI PLANNING - JUST SAY NO TO WATERFALL THINKING]
 
+https://de.slideshare.net/udowiegaertner/anleitung-zum-ruinieren-eines-scrum-teams[Anleitung zum Ruinieren eine Scrum Teams]
+
 === Git
 
 https://jeffkreeftmeijer.com/git-flow/[use git-flow]
