--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,11 @@
 
 === Kubernetes links and tutos
 
+==== Logging
+
+https://timber.io/blog/collecting-application-logs-on-kubernetes/[Collecting Application Logs On Kubernetes]
+https://kubernetes.io/docs/concepts/cluster-administration/logging/[Logging Architecture]
+
 ==== Logstash
 
 - https://towardsdatascience.com/the-basics-of-deploying-logstash-pipelines-to-kubernetes-94a470ad34d9[The basics of deploying Logstash pipelines to Kubernetes]
